force-app/main/default/objects/Business_Process__c/Business_Process__c.object-meta.xml
<CustomObject>
    <label>Business Process</label>
    <nameField>
        <label>Business Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>